training with orig/trans from fakely generated stuff

--- a/02-OpenNMT training by full sentences.ipynb
+++ b/02-OpenNMT training by full sentences.ipynb
@@ -26,16 +26,14 @@
    ],
    "source": [
     "# Download if on Colab\n",
-    "!curl -O https://raw.githubusercontent.com/jsoma/transliteration_project/master/raw/wic.vert\n",
-    "!curl -O https://raw.githubusercontent.com/jsoma/transliteration_project/master/raw/google-transliterated.txt\n",
-    "!curl -O https://raw.githubusercontent.com/jsoma/transliteration_project/master/raw/bible-original.txt\n",
+    "!curl -O https://raw.githubusercontent.com/jsoma/transliteration_project/master/raw/original.vert\n",
+    "!curl -O https://raw.githubusercontent.com/jsoma/transliteration_project/master/raw/transliterated.txt\n",
     "    \n",
     "!mkdir -p raw\n",
     "\n",
     "# -vn verbose + don't overwrite\n",
-    "!mv -vn wic.vert raw/wic.vert\n",
-    "!mv -vn google-transliterated.txt raw/google-transliterated.txt\n",
-    "!mv -vn bible-original.txt raw/bible-original.txt"
+    "!mv -vn original.original raw/original.original\n",
+    "!mv -vn transliterated.txt raw/transliterated.txt"
    ]
   },
   {
@@ -122,8 +120,8 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "original = open(\"raw/bible-original.txt\").readlines()\n",
-    "transliterated = open(\"raw/google-transliterated.txt\").readlines()\n",
+    "original = open(\"raw/original.txt\").readlines()\n",
+    "transliterated = open(\"raw/transliterated.txt\").readlines()\n",
     "\n",
     "sentences = pd.DataFrame({\n",
     "    'orig': original,\n",
