--- a/Transliteration.ipynb
+++ b/Transliteration.ipynb
@@ -2241,11 +2241,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 299,
+   "execution_count": 393,
    "metadata": {},
    "outputs": [],
    "source": [
     "import random\n",
+    "import more_itertools\n",
+    "    \n",
+    "replace_groups = [\n",
+    "    ['p', 'b'],\n",
+    "    ['k', 'c']\n",
+    "]\n",
+    "\n",
+    "def reasonable_replacement(source, pct_chance=0.4):\n",
+    "    replaced = source\n",
+    "    for group in replace_groups:\n",
+    "        # 40% of the time maybe replace an item something else in the group\n",
+    "        replacer = lambda orig: random.choice(group) if random.random() < pct_chance else orig[0]\n",
+    "        replaced = re.sub(\"|\".join(group), replacer, source)\n",
+    "    return replaced\n",
     "\n",
     "def select_char(c, simple=False):\n",
     "    try:\n",
@@ -2257,8 +2271,11 @@
     "        # Probably punctuation, we need to deal with that!\n",
     "        return \" \"\n",
     "\n",
-    "def transliterate(word, simple=False):\n",
-    "    return ''.join([select_char(c, simple=simple) for c in word]).replace(\"  \", \" \")"
+    "def transliterate(word, simple=False, replacements=True):\n",
+    "    selected = ''.join([select_char(c, simple=simple) for c in word]).replace(\"  \", \" \")\n",
+    "    if replacements:\n",
+    "        selected = reasonable_replacement(selected)\n",
+    "    return selected"
    ]
   },
   {
@@ -2270,18 +2287,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 320,
+   "execution_count": 394,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "* manemi sawi bihone yacikanye seqayi 'endayidersibete wayime kesebi'awi afasasame wec jahwona yatewarade tegebar weyimi qtati 'ajefetsamebetime.\n",
-      "* manemi sewi bihone yechikanye skaye 'enedayederesebet weyeme kesabi`awi afesasami wetch'e yehwona jatawared tegbare wayimi kitat 'ayefasamebatmi.\n",
-      "* manem sewi bihwoni jatch'ekane seqay inidayderisibat weyme kesabeawi 'afetsasemi weci yahona jatewarad tagbar weyeme qetate ayifasamibetim.\n",
-      "* manim sawe bihwon yatch'ekanye skay indayedarsibat wayeme kesabe`awi 'afatsaseme weci yahona yatewarad tagbari waymi qtate `ayefesemibetm.\n",
-      "* maneme saw bihwoni jacekane sqaje 'enedayidarsebate weyme kesebe`awi 'afetsatsame wece jahwone yatawared tegbar wejemi qtat ayfesemibetem.\n"
+      "* manm sewe bihwon yekane seqay `enedajederesibati wayimi casab'awi `afatsasemi w jahwona yetewaredi tegebar wayme qtate ayifatsamibetim.\n",
+      "* manme saw bihwone yakhikanye sekay `endayederisbat weyime casabe`awi afesasemi wtch'e yehwona jatawarede tegibar wejem qetate `ayfasamebatm.\n",
+      "* manmi sewi bihwone yekkanye scayi 'enidayedarsbate wayemi kesabe'awi `afasasame wc jahone yetawarad tagbare wayime qetat ajefasambatem.\n",
+      "* manim sawi bihone yecikane sikay `enedaydersebete wayeme cesebawi 'afasasam wece jahwone yatawarad tagebar wayim citati ajefesamibetimi.\n",
+      "* manemi sewi bihwoni yacicane siqay inidayederesibati wajeme kesebi'awi `afesasemi wtch'e yehona yetawarade tagibare weyme qetat `ayfetsamebatem.\n"
      ]
     }
    ],
@@ -2307,18 +2324,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 321,
+   "execution_count": 395,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "* mānïme sewe bihʷon yakane sïkāyɪ inedajĕdɑrsɪbat wăjemɪ kasɑbāwī ʾăfäSaSemɪ wɪcḥï yahōna yätewarədï tɑgebare wəyɪm ḳïTatɪ ʾăyïfəSəmĕbətɪm.\n",
-      "* mānemĕ săwɪ bihōne yakanʸe sĕkāyɪ ʼenɪdayderesïbet weym kesəbïāwi ʾäfăṣaṣam wïtch’ĕ yahōna jatewaradï tägïbārĕ wäjĕmĕ qeṭatĕ ʾäyïfăSemĕbătme.\n",
-      "* mānemĕ säwe bihʷonï yäCkāné seqāyɪ ʾĕnɪdayïdarĕsebɑt wayemɪ käsabïawi āfaṣāSəmĕ wïC yahonä jătewārade tägbarĕ wăyïm qeṭatï āyfəṣamĕbätĕmɪ.\n",
-      "* manïm säwĕ bīhōnĕ yeCɪkānē sĕḳayï əndayedarsbɑtĕ wăjĕmɪ kəsäbʿawi äfäṣāṣɑmɪ we jăhōnə jatɑwārɑd tagɪbār wajem qṭāt äyɪfäṣămïbatĕme.\n",
-      "* mānĕm săw bihonɪ jaCkanE sɪḳayï ʼenedayɪderesĕbăt wäjĕme kəsɑbĕāwī āfăSaṣäm wɪCɪ yəhōnə yatəwarădï tagbarɪ wejemï qṭat ʾăyɪfetsamɪbɑtĕme.\n"
+      "* mānɪmĕ săw bihʷonĕ yəcḥïkanʸe sɪqāye əndājĕderĕsïbɑt wäjĕm cesəbïʿawī afătsāṣamɪ wetkh’ĕ yahōnă yetewarăd tegbārɪ wajemĕ qeTat äjefăṣämbätm.\n",
+      "* maneme sawï bihōnɪ jaCkāné sKayɪ ïnïdāyɪdarïsbätɪ wəjĕmĕ kəsăbeʻāwi āfeṣaSem wĕ yəhonə yetawārăde tägïbar wayïmï Kɪtātï ayɪfäṣămbatĕme.\n",
+      "* mānme səwĕ bīhone jaCɪkanē sɪqāje ʾĕnïdājĕdarĕsɪbatï wåymɪ kasäbïʽāwi āfäṣātsamĕ wïCɪ yähʷonɑ yätäwārəd tɑgĕbārï wəyïm Kɪtātï ʼayɪfăSəmbatïmɪ.\n",
+      "* mānm səwe bīhōne yəcḥïkānʸe sɪKaje ïnïdāyedersïbete wayɪme kɑsabʻāwi äfeṣātsamĕ wïC yahōnä jătăwarədï tagbarĕ wăjĕme ḳïṭāte ʼayfäṣɑmebɑtïmɪ.\n",
+      "* mānɪmĕ səwĕ bihōnï yeč̣ecané seḳajĕ ïnïdāyɪdarɪsɪbɑt wăjĕmɪ kăsəbʽāwī ʾăfeṣatsame wĕtch’ĕ yehonä jătäwaräd tɑgbar wäjemĕ qṭatĕ ʾäyïfäṣamɪbɑtïmï.\n"
      ]
     }
    ],
@@ -2326,6 +2343,181 @@
     "for _ in range(5):\n",
     "    result = transliterate(text, simple=False)\n",
     "    print(f\"* {result}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Replacing similar items"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 397,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "jacecane\n",
+      "jacekane\n",
+      "jacecane\n",
+      "jacekane\n",
+      "jacekane\n"
+     ]
+    }
+   ],
+   "source": [
+    "import more_itertools\n",
+    "    \n",
+    "replace_groups = [\n",
+    "    ['p', 'b'],\n",
+    "    ['k', 'c']\n",
+    "]\n",
+    "\n",
+    "def reasonable_replacement_test(source, pct_chance=0.4):\n",
+    "    replaced = source\n",
+    "    for group in replace_groups:\n",
+    "        # 40% of the time maybe replace an item something else in the group\n",
+    "        replacer = lambda orig: random.choice(group) if random.random() < pct_chance else orig[0]\n",
+    "        replaced = re.sub(\"|\".join(group), replacer, source)\n",
+    "    return replaced\n",
+    "\n",
+    "\n",
+    "for _ in range(5):\n",
+    "    print(reasonable_replacement_test(\"jacekane\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Use it\n",
+    "\n",
+    "Using data from Corpus Crawler, which looks to just be Bible stuff."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 407,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['ስለሰብአዊ፡መብቶች፡ለማስተማር፡ የሚረዱ፡አንዳንድ፡ዘዴዎች።',\n",
+       " 'በዩኔስኮ፡ተዘጋጅቶ፡በኢትዮጵያ፡ብሄራዊ፡ኮሚሽን፡ተተረጎመ',\n",
+       " 'አንቀጽ፡፩፤',\n",
+       " 'የሰው፡ልጅ፡ሁሉ፡ሲወለድ፡ነጻና፡በክብርና፡በመብትም፡እኩልነት፡ያለው፡ነው።፡የተፈጥሮ፡ማስተዋልና፡ሕሊና፡ስላለው፡አንዱ፡ሌላውን፡በወንድማማችነት፡መንፈስ፡መመልከት፡ይገባዋል።',\n",
+       " 'አንቀጽ፡፪፤']"
+      ]
+     },
+     "execution_count": 407,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "text = open(\"corpuscrawler-master/corpus/am.txt\").readlines()\n",
+    "text = [line.strip() for line in text if not line.startswith(\"#\")]\n",
+    "text[0:5]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Drop duplicates"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 411,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7719"
+      ]
+     },
+     "execution_count": 411,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "uniques = list(set(text))\n",
+    "len(uniques)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Transliterate and save"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 423,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['እንዲህ ሲል። ሁለት ሰዎች ሊጸልዩ ወደ መቅደስ ወጡ፥ አንዱ ፈሪሳዊ ሁለተኛውም ቀራጭ።',\n",
+       " 'በትሕትና ሁሉና በየዋህነት በትዕግሥትም፤ እርስ በርሳችሁ በፍቅር ታገሡ፤',\n",
+       " 'እኔም ራሴ የናዝሬቱን የኢየሱስን ስም የሚቃወም እጅግ ነገር አደርግ ዘንድ እንዲገባኝ ይመስለኝ ነበር።',\n",
+       " 'ብዙ ሰዎችም በዙሪያው ተቀምጠው ነበሩና። እነሆ፥ እናትህ ወንድሞችህም በውጭ ቆመው ይፈልጉሃል አሉት።',\n",
+       " 'እነሆም፥ ከጻፎቹ አንዳንዱ በልባቸው። ይህስ ይሳደባል አሉ።']"
+      ]
+     },
+     "execution_count": 423,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "uniques[:5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 431,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "originals look like እንዲህ ሲል። ሁለት ሰዎች ሊጸልዩ ወደ መቅደስ ወጡ፥ አንዱ ፈሪሳዊ ሁለተኛውም ቀራጭ።\n",
+      "targets look like indih sile. hulet sawochi litsaliyu wede maqdasi watu: 'andu ferisawi huletagnawme karace.\n"
+     ]
+    }
+   ],
+   "source": [
+    "NUM_TRANSLITERATIONS = 15\n",
+    "\n",
+    "sources = []\n",
+    "transliterateds = []\n",
+    "for text in uniques:\n",
+    "    options = [transliterate(text, simple=True) for _ in range(NUM_TRANSLITERATIONS)]\n",
+    "    for transliteration in options:\n",
+    "        sources.append(text)\n",
+    "        transliterateds.append(transliteration)\n",
+    "\n",
+    "\n",
+    "print(\"originals look like\", sources[0])\n",
+    "print(\"targets look like\", targets[0])\n",
+    "\n",
+    "with open(\"raw/original.txt\", 'w') as f:\n",
+    "    f.writelines(sources)\n",
+    "\n",
+    "with open(\"raw/transliterated.txt\", 'w') as f:\n",
+    "    f.writelines(transliterateds)"
    ]
   },
   {
