i don't know filenames

--- a/02-OpenNMT training by full sentences.ipynb
+++ b/02-OpenNMT training by full sentences.ipynb
@@ -26,13 +26,13 @@
    ],
    "source": [
     "# Download if on Colab\n",
-    "!curl -O https://raw.githubusercontent.com/jsoma/transliteration_project/master/raw/original.vert\n",
+    "!curl -O https://raw.githubusercontent.com/jsoma/transliteration_project/master/raw/original.txt\n",
     "!curl -O https://raw.githubusercontent.com/jsoma/transliteration_project/master/raw/transliterated.txt\n",
     "    \n",
     "!mkdir -p raw\n",
     "\n",
     "# -vn verbose + don't overwrite\n",
-    "!mv -vn original.original raw/original.original\n",
+    "!mv -vn original.txt raw/original.txt\n",
     "!mv -vn transliterated.txt raw/transliterated.txt"
    ]
   },
