--- a/Transliteration.ipynb
+++ b/Transliteration.ipynb
@@ -2486,7 +2486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 431,
+   "execution_count": 432,
    "metadata": {},
    "outputs": [
     {
@@ -2514,10 +2514,28 @@
     "print(\"targets look like\", targets[0])\n",
     "\n",
     "with open(\"raw/original.txt\", 'w') as f:\n",
-    "    f.writelines(sources)\n",
+    "    f.write('\\n'.join(sources))\n",
     "\n",
     "with open(\"raw/transliterated.txt\", 'w') as f:\n",
-    "    f.writelines(transliterateds)"
+    "    f.write('\\n'.join(transliterateds))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 435,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  adding: raw/transliterated.txt (deflated 70%)\n",
+      "  adding: raw/original.txt (deflated 97%)\n"
+     ]
+    }
+   ],
+   "source": [
+    "!zip raw/datasets.zip raw/transliterated.txt raw/original.txt\n"
    ]
   },
   {
