--- a/02-OpenNMT training by full sentences.ipynb
+++ b/02-OpenNMT training by full sentences.ipynb
@@ -25,15 +25,11 @@
     }
    ],
    "source": [
-    "# Download if on Colab\n",
-    "!curl -O https://raw.githubusercontent.com/jsoma/transliteration_project/master/raw/original.txt\n",
-    "!curl -O https://raw.githubusercontent.com/jsoma/transliteration_project/master/raw/transliterated.txt\n",
-    "    \n",
-    "!mkdir -p raw\n",
+    "# Only on Colab\n",
+    "# !mkdir -p raw\n",
     "\n",
-    "# -vn verbose + don't overwrite\n",
-    "!mv -vn original.txt raw/original.txt\n",
-    "!mv -vn transliterated.txt raw/transliterated.txt"
+    "# !wget https://github.com/jsoma/transliteration_project/raw/master/raw/datasets.zip\n",
+    "# !unzip -o datasets.zip"
    ]
   },
   {
