--- a/Transliteration.ipynb
+++ b/Transliteration.ipynb
@@ -1433,7 +1433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 297,
+   "execution_count": 441,
    "metadata": {},
    "outputs": [
     {
@@ -1808,13 +1808,14 @@
        " 'ፙ': ['', '~mA', 'mya'],\n",
        " 'ፚ': ['', '~fi', 'fya'],\n",
        " '።': ['.'],\n",
+       " '፡': [' '],\n",
        " '፣': [','],\n",
        " '፤': [';'],\n",
        " '፥': [':'],\n",
        " '፧': ['?']}"
       ]
      },
-     "execution_count": 297,
+     "execution_count": 441,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1825,12 +1826,17 @@
     "with open(\"raw/lookup-table.json\") as f:\n",
     "    lookup = json.load(f)\n",
     "\n",
-    "lookup['።'] = ['.']\n",
-    "lookup['፡'] = [' ']\n",
-    "lookup['፣'] = [',']\n",
-    "lookup['፤'] = [';']\n",
-    "lookup['፥'] = [':']\n",
-    "lookup['፧'] = ['?']\n",
+    "punctuation = [\n",
+    "    ['።', '.'],\n",
+    "    ['፡', ' '],\n",
+    "    ['፣', ','],\n",
+    "    ['፤', ';'],\n",
+    "    ['፥', ':'],\n",
+    "    ['፧', '?']\n",
+    "]\n",
+    "\n",
+    "for punc in punctuation:\n",
+    "    lookup[punc[0]] = [punc[1]]\n",
     "\n",
     "lookup"
    ]
@@ -2486,32 +2492,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 432,
+   "execution_count": 459,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'እንዲህ ሲል ። ሁለት ሰዎች ሊጸልዩ ወደ መቅደስ ወጡ ፥ አንዱ ፈሪሳዊ ሁለተኛውም ቀራጭ ።'"
+      ]
+     },
+     "execution_count": 459,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def separate_punc(text):\n",
+    "    replaced = text\n",
+    "    for punc in punctuation:\n",
+    "        for p in punc:\n",
+    "            if p != \" \": \n",
+    "                replaced = replaced.replace(p, f\" {p} \")\n",
+    "    return re.sub(\" +\", \" \", replaced).strip()\n",
+    "\n",
+    "def clean_input(text):\n",
+    "    # We know what a space is and it makes things too complicated to use ፡\n",
+    "    cleaned = text.replace(\"፡\", \" \")\n",
+    "    return separate_punc(text)\n",
+    "\n",
+    "clean_input(uniques[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 466,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "originals look like እንዲህ ሲል። ሁለት ሰዎች ሊጸልዩ ወደ መቅደስ ወጡ፥ አንዱ ፈሪሳዊ ሁለተኛውም ቀራጭ።\n",
-      "targets look like indih sile. hulet sawochi litsaliyu wede maqdasi watu: 'andu ferisawi huletagnawme karace.\n"
+      "originals look like እንዲህ ሲል ። ሁለት ሰዎች ሊጸልዩ ወደ መቅደስ ወጡ ፥ አንዱ ፈሪሳዊ ሁለተኛውም ቀራጭ ።\n",
+      "targets look like inidihi sil . hulat sewo liseliyu wade meqdese watu : andu ferisawi huletenawm qera .\n"
      ]
     }
    ],
    "source": [
-    "NUM_TRANSLITERATIONS = 15\n",
+    "NUM_TRANSLITERATIONS = 40\n",
     "\n",
     "sources = []\n",
     "transliterateds = []\n",
     "for text in uniques:\n",
-    "    options = [transliterate(text, simple=True) for _ in range(NUM_TRANSLITERATIONS)]\n",
+    "    cleaned = clean_input(text)\n",
+    "    options = [transliterate(cleaned, simple=True) for _ in range(NUM_TRANSLITERATIONS)]\n",
     "    for transliteration in options:\n",
-    "        sources.append(text)\n",
+    "        sources.append(cleaned)\n",
     "        transliterateds.append(transliteration)\n",
     "\n",
     "\n",
     "print(\"originals look like\", sources[0])\n",
-    "print(\"targets look like\", targets[0])\n",
+    "print(\"targets look like\", transliterateds[0])\n",
     "\n",
     "with open(\"raw/original.txt\", 'w') as f:\n",
     "    f.write('\\n'.join(sources))\n",
@@ -2522,15 +2562,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 435,
+   "execution_count": 467,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  adding: raw/transliterated.txt (deflated 70%)\n",
-      "  adding: raw/original.txt (deflated 97%)\n"
+      "How many? 308760\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"How many?\", len(sources))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 468,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "updating: raw/transliterated.txt (deflated 76%)\n",
+      "updating: raw/original.txt (deflated 98%)\n"
      ]
     }
    ],
