--- a/Transliteration.ipynb
+++ b/Transliteration.ipynb
@@ -2597,6 +2597,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 471,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"kaalami zuriya yetawetatu zyenawotchenina yatalajayu maradjawotchen bayailatu `enaqarebalani . mnegizeme kebibisi `amarna kemanim jaliwagenu , mizana'wi , teamani ,\""
+      ]
+     },
+     "execution_count": 471,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "transliterate(clean_input(\"ከዓለም ዙሪያ የተውጣጡ ዜናዎችንና የተለያዩ መረጃዎችን በየዕለቱ እናቀርባለን። ምንጊዜም ከቢቢሲ አማርኛ ከማንም ያልወገኑ፣ ሚዛናዊ፣ ተዓማኒ፣\"), simple=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
