whyyyy dont you work

--- a/02-OpenNMT training by full sentences.ipynb
+++ b/02-OpenNMT training by full sentences.ipynb
@@ -1134,13 +1134,63 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "UvvFipU_1CEq",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "62e6e55c-6db4-4d78-9fe2-6fabde1ecdb0"
+      },
+      "source": [
+        "!head -n 1 raw/original.txt"
+      ],
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "እንዲህ ሲል ። ሁለት ሰዎች ሊጸልዩ ወደ መቅደስ ወጡ ፥ አንዱ ፈሪሳዊ ሁለተኛውም ቀራጭ ።\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "0gWSsH8R1FbT",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "d75a4d37-27fe-4ee4-933a-89b765fb94b7"
+      },
+      "source": [
+        "!head -n 1 raw/transliterated.txt"
+      ],
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "inidihi sil . hulat sewo liseliyu wade meqdese watu : andu ferisawi huletenawm qera .\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "6wYh0Zi5GcKh",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "original = \"\"\"ከዓለም\"\"\"\n",
-        "transliterated = \"\"\"kaalami\"\"\"\n",
+        "original = \"\"\"ሁለት ሰዎች ሊጸልዩ ወደ መቅደስ ወጡ ፥ አንዱ ፈሪሳዊ\"\"\"\n",
+        "transliterated = \"\"\"hulat sewo liseliyu wade meqdese watu : andu ferisawi\"\"\"\n",
         "\n",
         "orig_oneline = original.replace(\"\\n\", \" \").strip().replace(\"  \", \" \")\n",
         "trans_oneline = transliterated.replace(\"\\n\", \" \").strip().replace(\"  \", \" \")\n",
@@ -1169,7 +1219,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "7e2dffe8-d40a-48d6-e293-1f75980ee7ef"
+        "outputId": "b774873d-0c3b-4b1b-ec38-607d1cd00ce0"
       },
       "source": [
         "import subprocess\n",
@@ -1178,7 +1228,7 @@
         "                            stdout=subprocess.PIPE).stdout.decode(\"utf-8\").strip()\n",
         "print(\"Using model\", model_name)"
       ],
-      "execution_count": 18,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "stream",
@@ -1198,7 +1248,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 119
         },
-        "outputId": "fc1bd456-43d7-4efb-ae96-9b611b608057"
+        "outputId": "744310ab-ac64-43d0-bb89-42a57a8bff85"
       },
       "source": [
         "!onmt_translate \\\n",
@@ -1206,17 +1256,17 @@
         "    -src data/test.txt \\\n",
         "    -output data/pred.txt -replace_unk -verbose\n"
       ],
-      "execution_count": 19,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "[2020-04-27 17:53:18,489 INFO] Translating shard 0.\n",
+            "[2020-04-27 18:10:49,724 INFO] Translating shard 0.\n",
             "\n",
-            "SENT 1: ['kaalami']\n",
-            "PRED 1: \"አንቀጽ ፡ ፱ ?\n",
-            "PRED SCORE: -1.4627\n",
-            "PRED AVG SCORE: -0.3657, PRED PPL: 1.4415\n"
+            "SENT 1: ['hulat', 'sewo', 'liseliyu', 'wade', 'meqdese', 'watu', ':', 'andu', 'ferisawi']\n",
+            "PRED 1: \"ደግሞም ሁሉን በየስፍራው ወደ መቅደስ ሲወጣ ፥ ደስ በለው ፥\n",
+            "PRED SCORE: -3.1997\n",
+            "PRED AVG SCORE: -0.3200, PRED PPL: 1.3771\n"
           ],
           "name": "stdout"
         }
@@ -1231,22 +1281,22 @@
           "base_uri": "https://localhost:8080/",
           "height": 85
         },
-        "outputId": "910df839-1575-4231-8140-69b2f0eb45ec"
+        "outputId": "acbb2c2e-b3f6-48b6-ddbc-b37f235136f8"
       },
       "source": [
         "print(\"Output: \", open(\"data/pred.txt\").read())\n",
         "print(\"Input: \", open(\"data/test.txt\").read())\n",
         "print(\"Actual: \", orig_oneline)"
       ],
-      "execution_count": 20,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Output:  \"አንቀጽ ፡ ፱ ?\n",
+            "Output:  \"ደግሞም ሁሉን በየስፍራው ወደ መቅደስ ሲወጣ ፥ ደስ በለው ፥\n",
             "\n",
-            "Input:  kaalami\n",
-            "Actual:  ከዓለም\n"
+            "Input:  hulat sewo liseliyu wade meqdese watu : andu ferisawi\n",
+            "Actual:  ሁለት ሰዎች ሊጸልዩ ወደ መቅደስ ወጡ ፥ አንዱ ፈሪሳዊ\n"
           ],
           "name": "stdout"
         }
