--- a/Transliteration.ipynb
+++ b/Transliteration.ipynb
@@ -1433,7 +1433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 441,
+   "execution_count": 472,
    "metadata": {},
    "outputs": [
     {
@@ -1815,7 +1815,7 @@
        " '፧': ['?']}"
       ]
      },
-     "execution_count": 441,
+     "execution_count": 472,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1850,7 +1850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 298,
+   "execution_count": 473,
    "metadata": {},
    "outputs": [
     {
@@ -2225,13 +2225,14 @@
        " 'ፙ': ['', '~ma', 'mya'],\n",
        " 'ፚ': ['', '~fi', 'fya'],\n",
        " '።': ['.'],\n",
+       " '፡': [' '],\n",
        " '፣': [','],\n",
        " '፤': [';'],\n",
        " '፥': [':'],\n",
        " '፧': ['?']}"
       ]
      },
-     "execution_count": 298,
+     "execution_count": 473,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2247,7 +2248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 393,
+   "execution_count": 474,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2293,18 +2294,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 394,
+   "execution_count": 475,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "* manm sewe bihwon yekane seqay `enedajederesibati wayimi casab'awi `afatsasemi w jahwona yetewaredi tegebar wayme qtate ayifatsamibetim.\n",
-      "* manme saw bihwone yakhikanye sekay `endayederisbat weyime casabe`awi afesasemi wtch'e yehwona jatawarede tegibar wejem qetate `ayfasamebatm.\n",
-      "* manmi sewi bihwone yekkanye scayi 'enidayedarsbate wayemi kesabe'awi `afasasame wc jahone yetawarad tagbare wayime qetat ajefasambatem.\n",
-      "* manim sawi bihone yecikane sikay `enedaydersebete wayeme cesebawi 'afasasam wece jahwone yatawarad tagebar wayim citati ajefesamibetimi.\n",
-      "* manemi sewi bihwoni yacicane siqay inidayederesibati wajeme kesebi'awi `afesasemi wtch'e yehona yetawarade tagibare weyme qetat `ayfetsamebatem.\n"
+      "* manm sawi bihone jacicane sqaye 'enidayedarsebete weyim kasabi`awi 'afasasem wice jahwone jatawarede tegibar wayemi kitati ajefesamibateme.\n",
+      "* manme sew bihwone yechikane siqayi `enidaydersibet weyimi casebeawi `afatsatsam wice jahwona yatewarade tagbar weyime qtati 'ayifesambetime.\n",
+      "* manime sew bihwoni yecicane seqaje 'enidaydersibete waym cesabe'awi 'afetsasami wice yahona yatewaradi tagibare weyime qetati ayfesamebetem.\n",
+      "* manem sawe bihwon yekanye secay inidayederisbati wajemi cesabi'awi `afatsatsami wce jahwona yatewarad tegebar weym kitat 'ayefesemibatme.\n",
+      "* manemi sew bihoni jackanye sekayi `endajedaresibete wajem kasebe'awi `afesaseme wetkh'e yehwone yatawarad tagibari wayme kitati 'ayfesambatme.\n"
      ]
     }
    ],
@@ -2330,18 +2331,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 395,
+   "execution_count": 476,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "* mānɪmĕ săw bihʷonĕ yəcḥïkanʸe sɪqāye əndājĕderĕsïbɑt wäjĕm cesəbïʿawī afătsāṣamɪ wetkh’ĕ yahōnă yetewarăd tegbārɪ wajemĕ qeTat äjefăṣämbätm.\n",
-      "* maneme sawï bihōnɪ jaCkāné sKayɪ ïnïdāyɪdarïsbätɪ wəjĕmĕ kəsăbeʻāwi āfeṣaSem wĕ yəhonə yetawārăde tägïbar wayïmï Kɪtātï ayɪfäṣămbatĕme.\n",
-      "* mānme səwĕ bīhone jaCɪkanē sɪqāje ʾĕnïdājĕdarĕsɪbatï wåymɪ kasäbïʽāwi āfäṣātsamĕ wïCɪ yähʷonɑ yätäwārəd tɑgĕbārï wəyïm Kɪtātï ʼayɪfăSəmbatïmɪ.\n",
-      "* mānm səwe bīhōne yəcḥïkānʸe sɪKaje ïnïdāyedersïbete wayɪme kɑsabʻāwi äfeṣātsamĕ wïC yahōnä jătăwarədï tagbarĕ wăjĕme ḳïṭāte ʼayfäṣɑmebɑtïmɪ.\n",
-      "* mānɪmĕ səwĕ bihōnï yeč̣ecané seḳajĕ ïnïdāyɪdarɪsɪbɑt wăjĕmɪ kăsəbʽāwī ʾăfeṣatsame wĕtch’ĕ yehonä jătäwaräd tɑgbar wäjemĕ qṭatĕ ʾäyïfäṣamɪbɑtïmï.\n"
+      "* mānĕm sɑwe bihone yəCkane sĕqajĕ inïdaydɑrïsĕbətɪ weymĕ cəsäbïāwī ʾăfəṣaṣämĕ wɪč̣e yəhōnä yätɑwarädɪ tegbarɪ wayme ḳïtātĕ ayfäṣämĕbătmï.\n",
+      "* manmɪ səwɪ bihōnï yaCɪkane sĕKajĕ ʾĕnedayderesĕbətĕ wäyïmɪ kesebɪʻāwī ʼafaṣāṣămɪ weCɪ jahōnă yetəwāradï təgbar wăjĕme ḳïṭātï ʾäyefaṣämbetïmĕ.\n",
+      "* manmï səwï bīhōnĕ jăCɪkāné sKaje ʼenɪdāydärɪsebäte weymï kəsɑbïāwi äfăSaṣämï wĕkḥï yähōnä yatɑwaradï təgĕbārï wăymï Kɪṭātï äyfătsambătɪm.\n",
+      "* manïmɪ səwĕ bīhōnĕ yatkh’ĕkāné sïKayï ʾĕnɪdajedarïsïbətï wäyem cɑsebïāwi ʾäfeṣāṣamï wĕ jăhōnɑ yətawārăde tägebare wajemĕ Kɪṭātï ʾäyefɑṣɑmɪbatïme.\n",
+      "* mānïmĕ săwĕ bihōn yekanē sɪḳayɪ ïnɪdāyɪdɑrɪsïbat wăyemĕ kăsäbɪʿawī ʼafăṣāṣamï wCɪ yəhōne yätəwārede tagĕbare wajĕmɪ KɪTatï ʾăyïfəṣämbätĕmĕ.\n"
      ]
     }
    ],
@@ -2360,17 +2361,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 397,
+   "execution_count": 477,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "jacecane\n",
+      "jacekane\n",
+      "jakekane\n",
       "jacekane\n",
       "jacecane\n",
-      "jacekane\n",
       "jacekane\n"
      ]
     }
@@ -2379,7 +2380,7 @@
     "import more_itertools\n",
     "    \n",
     "replace_groups = [\n",
-    "    ['p', 'b'],\n",
+    "#     ['p', 'b'],\n",
     "    ['k', 'c']\n",
     "]\n",
     "\n",
@@ -2407,27 +2408,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 407,
+   "execution_count": 493,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['ስለሰብአዊ፡መብቶች፡ለማስተማር፡ የሚረዱ፡አንዳንድ፡ዘዴዎች።',\n",
-       " 'በዩኔስኮ፡ተዘጋጅቶ፡በኢትዮጵያ፡ብሄራዊ፡ኮሚሽን፡ተተረጎመ',\n",
-       " 'አንቀጽ፡፩፤',\n",
-       " 'የሰው፡ልጅ፡ሁሉ፡ሲወለድ፡ነጻና፡በክብርና፡በመብትም፡እኩልነት፡ያለው፡ነው።፡የተፈጥሮ፡ማስተዋልና፡ሕሊና፡ስላለው፡አንዱ፡ሌላውን፡በወንድማማችነት፡መንፈስ፡መመልከት፡ይገባዋል።',\n",
-       " 'አንቀጽ፡፪፤']"
+       "['ጠ/ሚ መለስ ዜናዊ \"ጦርነት ኳስ ጨዋታ አይደለም!\" አሉ',\n",
+       " 'ሰሞኑን በሕወሓት/ኢሕአዴግ ግምገማ ውስጥ ዋነኛው የግምገማ በትር ያረፈው በጠ/ሚ መለስ ዜናዊ ላይ መሆኑ ተደጋግሞ እየተሰማ ነው።',\n",
+       " 'ከዚሁ ጋር ተያይዞ የጠ/ሚንስትሩ ጋርዶች በሌሎች መቀየራቸው፣  ከአቶ መለስ ዜናዊ ጋር የሚያገናኙ የቤተ መንግሥት የስልክ ግንኙነቶች መቋረጣቸው በሰፊው እየተነገረ ሲሆን፣ማንኛውንም የወቅቱን ጉዳይ አስመልክቶ መነጋገር የሚቻለው ከውጭ ጉዳይ ሚ/ር መ/ቤት ጋር መሆኑ ታውቋል።',\n",
+       " 'አቶ መለስ ዜናዊ በዚህ ሁኔታ ውስጥ መሆናቸው እየተነገረ ባለበት ወቅት ነው ከአሜሪካ ሬዲዮ ጋር ቃለ ምልልስ ያደረጉት።',\n",
+       " 'በቃለ ምልልሱም ወቅት በሕወሓት አመራር አካል የኤርትራን ጥያቄ ልዩነት ነበር ይባላል።']"
       ]
      },
-     "execution_count": 407,
+     "execution_count": 493,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "text = open(\"corpuscrawler-master/corpus/am.txt\").readlines()\n",
-    "text = [line.strip() for line in text if not line.startswith(\"#\")]\n",
+    "#text = open(\"corpuscrawler-master/corpus/am.txt\").readlines()\n",
+    "text = open(\"raw/new-am.txt\").readlines()\n",
+    "text = [line.strip() for line in text if len(line.strip()) > 0]\n",
     "text[0:5]"
    ]
   },
@@ -2440,16 +2442,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 411,
+   "execution_count": 494,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "7719"
+       "48651"
       ]
      },
-     "execution_count": 411,
+     "execution_count": 494,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2468,20 +2470,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 423,
+   "execution_count": 497,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['እንዲህ ሲል። ሁለት ሰዎች ሊጸልዩ ወደ መቅደስ ወጡ፥ አንዱ ፈሪሳዊ ሁለተኛውም ቀራጭ።',\n",
-       " 'በትሕትና ሁሉና በየዋህነት በትዕግሥትም፤ እርስ በርሳችሁ በፍቅር ታገሡ፤',\n",
-       " 'እኔም ራሴ የናዝሬቱን የኢየሱስን ስም የሚቃወም እጅግ ነገር አደርግ ዘንድ እንዲገባኝ ይመስለኝ ነበር።',\n",
-       " 'ብዙ ሰዎችም በዙሪያው ተቀምጠው ነበሩና። እነሆ፥ እናትህ ወንድሞችህም በውጭ ቆመው ይፈልጉሃል አሉት።',\n",
-       " 'እነሆም፥ ከጻፎቹ አንዳንዱ በልባቸው። ይህስ ይሳደባል አሉ።']"
+       "['“የዳታ ፕሮሰሲንግ አገልግሎት” ማለት በኮምፒዩተር ሥርዓት አማካኝነት ዳታን የመቀበል፣ የማከማቸት፣ የመተንተን፣ የማሰራጨት፣ የማጓጓዝ ወይም የማስተላለፍ አገልግሎት ሲሆን የኔትዎርክ አገልግሎችንም',\n",
+       " 'የኤጀንሲው ዓላማ',\n",
+       " 'እንዲህ አለው፦ “ዮፍታሔ እንዲህ ይላል፦ ‘እስራኤል የሞዓባውያንን ምድርና የአሞናውያንን ምድር አልወሰደም፤',\n",
+       " 'ሆኖም ትርፏና የምትቀበለው ክፍያ ለይሖዋ የተቀደሰ ይሆናል። አይከማችም ወይም አይጠራቀምም፤ ምክንያቱም በይሖዋ ፊት የሚኖሩ ሰዎች እስኪጠግቡ ድረስ እንዲበሉና የሚያምር ልብስ እንዲለብሱ እሷ የምትቀበለው ክፍያ ለእነሱ ይሰጣል።',\n",
+       " 'በሀገራችን ኢትዮጵያ ተጨማሪ ጠላትና የሻዕቢያ ረዱት በመሆን አጋርነቱን እያረጋገጠ ለሚገኘው (ኦነግ) መጠናከርና ማደግ የሃይማኖት ሰዎች እጅ በድጋፍ ሰጪነት መኖሩ ተገለፀ።']"
       ]
      },
-     "execution_count": 423,
+     "execution_count": 497,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2492,16 +2494,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 459,
+   "execution_count": 498,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'እንዲህ ሲል ። ሁለት ሰዎች ሊጸልዩ ወደ መቅደስ ወጡ ፥ አንዱ ፈሪሳዊ ሁለተኛውም ቀራጭ ።'"
+       "'“የዳታ ፕሮሰሲንግ አገልግሎት” ማለት በኮምፒዩተር ሥርዓት አማካኝነት ዳታን የመቀበል ፣ የማከማቸት ፣ የመተንተን ፣ የማሰራጨት ፣ የማጓጓዝ ወይም የማስተላለፍ አገልግሎት ሲሆን የኔትዎርክ አገልግሎችንም'"
       ]
      },
-     "execution_count": 459,
+     "execution_count": 498,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2525,20 +2527,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 466,
+   "execution_count": 499,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "originals look like እንዲህ ሲል ። ሁለት ሰዎች ሊጸልዩ ወደ መቅደስ ወጡ ፥ አንዱ ፈሪሳዊ ሁለተኛውም ቀራጭ ።\n",
-      "targets look like inidihi sil . hulat sewo liseliyu wade meqdese watu : andu ferisawi huletenawm qera .\n"
+      "originals look like “የዳታ ፕሮሰሲንግ አገልግሎት” ማለት በኮምፒዩተር ሥርዓት አማካኝነት ዳታን የመቀበል ፣ የማከማቸት ፣ የመተንተን ፣ የማሰራጨት ፣ የማጓጓዝ ወይም የማስተላለፍ አገልግሎት ሲሆን የኔትዎርክ አገልግሎችንም\n",
+      "targets look like  jadata perwosasinegi `ageligelwote maleti becomepiyutari siri`at `amakannate datan yemecabal , jamacemaket , jamatanitan , yemasarat , yamagwagwaz wayim yemastelalafi 'agelglwoti sihwone yeneteworik agaligelonme\n"
      ]
     }
    ],
    "source": [
-    "NUM_TRANSLITERATIONS = 40\n",
+    "NUM_TRANSLITERATIONS = 2\n",
     "\n",
     "sources = []\n",
     "transliterateds = []\n",
@@ -2562,14 +2564,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 467,
+   "execution_count": 501,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "How many? 308760\n"
+      "How many? 97302\n"
      ]
     }
    ],
@@ -2579,15 +2581,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 468,
+   "execution_count": 502,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "updating: raw/transliterated.txt (deflated 76%)\n",
-      "updating: raw/original.txt (deflated 98%)\n"
+      "updating: raw/transliterated.txt (deflated 58%)\n",
+      "updating: raw/original.txt (deflated 82%)\n"
      ]
     }
    ],
