trying transliteration on a word basis instead of a phrase basis

--- a/Transliteration.ipynb
+++ b/Transliteration.ipynb
@@ -2403,12 +2403,12 @@
    "source": [
     "# Use it\n",
     "\n",
-    "Using data from Corpus Crawler, which looks to just be Bible stuff."
+    "Using data from `new-am.txt`, which is Bible + legal + news."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 493,
+   "execution_count": 503,
    "metadata": {},
    "outputs": [
     {
@@ -2421,7 +2421,7 @@
        " 'በቃለ ምልልሱም ወቅት በሕወሓት አመራር አካል የኤርትራን ጥያቄ ልዩነት ነበር ይባላል።']"
       ]
      },
-     "execution_count": 493,
+     "execution_count": 503,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2442,7 +2442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 494,
+   "execution_count": 504,
    "metadata": {},
    "outputs": [
     {
@@ -2451,7 +2451,7 @@
        "48651"
       ]
      },
-     "execution_count": 494,
+     "execution_count": 504,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2615,6 +2615,134 @@
    ],
    "source": [
     "transliterate(clean_input(\"ከዓለም ዙሪያ የተውጣጡ ዜናዎችንና የተለያዩ መረጃዎችን በየዕለቱ እናቀርባለን። ምንጊዜም ከቢቢሲ አማርኛ ከማንም ያልወገኑ፣ ሚዛናዊ፣ ተዓማኒ፣\"), simple=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Split into individual words"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 505,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['“የዳታ ፕሮሰሲንግ አገልግሎት” ማለት በኮምፒዩተር ሥርዓት አማካኝነት ዳታን የመቀበል፣ የማከማቸት፣ የመተንተን፣ የማሰራጨት፣ የማጓጓዝ ወይም የማስተላለፍ አገልግሎት ሲሆን የኔትዎርክ አገልግሎችንም',\n",
+       " 'የኤጀንሲው ዓላማ',\n",
+       " 'እንዲህ አለው፦ “ዮፍታሔ እንዲህ ይላል፦ ‘እስራኤል የሞዓባውያንን ምድርና የአሞናውያንን ምድር አልወሰደም፤',\n",
+       " 'ሆኖም ትርፏና የምትቀበለው ክፍያ ለይሖዋ የተቀደሰ ይሆናል። አይከማችም ወይም አይጠራቀምም፤ ምክንያቱም በይሖዋ ፊት የሚኖሩ ሰዎች እስኪጠግቡ ድረስ እንዲበሉና የሚያምር ልብስ እንዲለብሱ እሷ የምትቀበለው ክፍያ ለእነሱ ይሰጣል።',\n",
+       " 'በሀገራችን ኢትዮጵያ ተጨማሪ ጠላትና የሻዕቢያ ረዱት በመሆን አጋርነቱን እያረጋገጠ ለሚገኘው (ኦነግ) መጠናከርና ማደግ የሃይማኖት ሰዎች እጅ በድጋፍ ሰጪነት መኖሩ ተገለፀ።']"
+      ]
+     },
+     "execution_count": 505,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "uniques[0:5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 512,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "146557"
+      ]
+     },
+     "execution_count": 512,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "unique_words = list(set(' '.join(uniques).strip().split(' ')))\n",
+    "unique_words.remove('')\n",
+    "len(unique_words)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 513,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['ስሜታቸውንና', 'እመድባለሁ፤', 'እሟገትልሻለሁ፤ደግሞም', 'የተባለን', 'የሚተነትኑ']"
+      ]
+     },
+     "execution_count": 513,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "unique_words[0:5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 516,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "originals look like ስሜታቸውንና\n",
+      "targets look like smetacewinna'\n"
+     ]
+    }
+   ],
+   "source": [
+    "NUM_TRANSLITERATIONS = 4\n",
+    "\n",
+    "sources = []\n",
+    "transliterateds = []\n",
+    "for text in unique_words:\n",
+    "    cleaned = clean_input(text)\n",
+    "    options = [transliterate(cleaned, simple=True) for _ in range(NUM_TRANSLITERATIONS)]\n",
+    "    for transliteration in options:\n",
+    "        sources.append(cleaned)\n",
+    "        transliterateds.append(transliteration)\n",
+    "\n",
+    "\n",
+    "print(\"originals look like\", sources[0])\n",
+    "print(\"targets look like\", transliterateds[0])\n",
+    "\n",
+    "with open(\"raw/original-words.txt\", 'w') as f:\n",
+    "    f.write('\\n'.join(sources))\n",
+    "\n",
+    "with open(\"raw/transliterated-words.txt\", 'w') as f:\n",
+    "    f.write('\\n'.join(transliterateds))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 517,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "updating: raw/transliterated-words.txt (deflated 62%)\n",
+      "updating: raw/original-words.txt (deflated 87%)\n"
+     ]
+    }
+   ],
+   "source": [
+    "!zip raw/datasets-words.zip raw/transliterated-words.txt raw/original-words.txt\n"
    ]
   },
   {
